# HeisenbergModel

./: .gitignore  README.md
OpenMP/: CMakeLists.txt  energy.cpp  funs.cpp  main.cpp  main_kernels.cpp  update.cpp
OpenMP/include/: energy.h  funs.h  main_kernels.h  update.h  variables.h
OpenMP/include/gltools/: gl_mesh.hpp  glfw_app.hpp  glfw_window.hpp
OpenMP/include/trng/: Makefile  config.hpp
cuda/: CMakeLists.txt  GLFWConfig.cmake  energy.cu  funs.cu  main.cu  main_kernels.cu  plot1.py  update.cu
cuda/include/: energy.h  funs.h  graphics.h  main_kernels.h  update.h  variables.h
cuda/include/Random123/: philox.h
cuda/include/gltools/: gl_lib.hpp  gl_mesh.hpp  glfw_app.hpp  glfw_window.hpp
cuda/lib/: libglfw3.a-32
